apps/minio/httproute/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - artifacts-console.example.com
  rules:
    - backendRefs:
        - name: minio
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - artifacts.example.com
  rules:
    - backendRefs:
        - name: minio
          port: 9000
